--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@ class AnalyticsLoader {
               <li><a href="about.html#company-history" class="nav-link"><i class="bi bi-clock-history"></i><span>Company History</span></a></li>
               <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
-              <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
               <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
               <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
@@ -112,7 +111,7 @@ class AnalyticsLoader {
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
-              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.webp" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -160,13 +159,22 @@ class AnalyticsLoader {
               <li><a href="contact.html#contact" class="nav-link"><i class="bi bi-chat-dots-fill"></i><span>Chat with Us</span></a></li>
             </ul>
           </li>
+
+          <li>
+            <a href="https://calendly.com/avipil/30-min" class="book-call-btn" target="_blank">
+                <span class="book-call-content">
+                    <span>Book a Call</span>
+                </span>
+                <span class="book-call-hover"></span>
+            </a>
+        </li>
         </ul>
       </nav>
   
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
   
     </div>
-  </header>
+</header>
   
   
   
@@ -182,7 +190,7 @@ class AnalyticsLoader {
           <div class="col-xl-7">
             <h1 data-aos="fade-up " id="typewriter-title"></h1>
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <p id="typewriter-drescription">Incorporating artificial intelligence and automated security solutions to help businesses increase ROI and reduce costs.</p>
+              <p id="typewriter-drescription">AI Security and Profit-Boosting Solutions.              </p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#why-us" class="btn-get-started">Get Started</a>
@@ -323,9 +331,45 @@ class AnalyticsLoader {
         </div>
       </div>
     </section><!-- /Call To Action Section -->
+<!-- C-Commerce Call To Action Section -->
+<section id="call-to-action-2" class="call-to-action section dark-background">
+  <img src="/assets/img/imgfondoccomerce.webp" alt="Background image" loading="lazy">
+
+  <div class="container">
+    <div class="row gy-4">
+      <!-- Left Column - Video -->
+      <div class="col-lg-6" data-aos="zoom-out">
+        <img src="assets/img/dashboardcommerce.webp" class="dashboardcommerce">
+        </div>
+
+      <!-- Right Column - Text -->
+      <div class="col-lg-6">
+        <div class="text-left" data-aos="fade-up">
+          <h3>Double Your Sales with AI Power</h3>
+          <h3>Discover <b>C-Commerce Ultra</b></h3>
+          <p>
+            Transform your business with AI-powered sales intelligence.
+            <br>
+            See how C-Commerce Ultra analyzes customer behavior and optimizes conversions.
+          </p>
+          <div class="d-flex mt-4 justify-content-start">
+            <a class="cta-btn" href="ccommerce.html">
+              <i class="bi bi-graph-up"></i>
+              <span>Boost Your Sales</span>
+            </a>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- Services Section -->
     <section id="services" class="services section">
+
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -415,7 +459,7 @@ class AnalyticsLoader {
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section">
 
-      <img src="./assets/img/inteligencia call to action.webp" alt="">
+      <img src="./assets/img/calltoaction.webp" alt="">
 
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
@@ -526,7 +570,7 @@ class AnalyticsLoader {
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
+            <p>At Ultra Deep Tech, we simply help your business work smarter with AI, especially with generative and conversational systems. We'll help you save money and grow your revenue. Every AI solution we provide is built with security at heart – keeping your business safe and compliant. We believe in keeping things practical and focused on real results.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
