--- a/about.html
+++ b/about.html
@@ -61,7 +61,6 @@
               <li><a href="about.html#company-history" class="nav-link"><i class="bi bi-clock-history"></i><span>Company History</span></a></li>
               <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
-              <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
               <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
               <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
@@ -75,7 +74,7 @@
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
-              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.webp" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -123,13 +122,22 @@
               <li><a href="contact.html#contact" class="nav-link"><i class="bi bi-chat-dots-fill"></i><span>Chat with Us</span></a></li>
             </ul>
           </li>
+
+          <li>
+            <a href="https://calendly.com/avipil/30-min" class="book-call-btn" target="_blank">
+                <span class="book-call-content">
+                    <span>Book a Call</span>
+                </span>
+                <span class="book-call-hover"></span>
+            </a>
+        </li>
         </ul>
       </nav>
   
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
   
     </div>
-  </header>
+</header>
 
   <main class="main">
 
@@ -193,29 +201,6 @@
       </div>
     </section><!-- /Values and Ethics Section -->
 
-    <!-- Corporate Social Responsibility Section -->
-    <section id="csr" class="about section">
-      <div class="container">
-        <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-lg-6">
-            <img src="assets/img/crs.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="content">
-              <h3>Corporate Social Responsibility</h3>
-              <p>
-                At Ultra Deep Tech, we are dedicated to making a positive societal impact through our corporate social responsibility (CSR) initiatives. This includes promoting digital literacy to bridge the digital divide, supporting STEM education to inspire future innovators, and implementing sustainable practices to reduce our environmental footprint. These efforts reflect our commitment to fostering education, sustainability, and community welfare, ensuring we contribute meaningfully to a better tomorrow for all.
-
-
-
-
-
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- /Corporate Social Responsibility Section -->
     
     <div class="container">
       <div class="section-title">
@@ -398,7 +383,7 @@
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
+            <p>At Ultra Deep Tech, we simply help your business work smarter with AI, especially with generative and conversational systems. We'll help you save money and grow your revenue. Every AI solution we provide is built with security at heart – keeping your business safe and compliant. We believe in keeping things practical and focused on real results.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
