--- a/ccommerce.html
+++ b/ccommerce.html
@@ -57,7 +57,6 @@
               <li><a href="about.html#company-history" class="nav-link"><i class="bi bi-clock-history"></i><span>Company History</span></a></li>
               <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
-              <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
               <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
               <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
@@ -71,7 +70,7 @@
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
-              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.webp" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -119,13 +118,22 @@
               <li><a href="contact.html#contact" class="nav-link"><i class="bi bi-chat-dots-fill"></i><span>Chat with Us</span></a></li>
             </ul>
           </li>
+
+          <li>
+            <a href="https://calendly.com/avipil/30-min" class="book-call-btn" target="_blank">
+                <span class="book-call-content">
+                    <span>Book a Call</span>
+                </span>
+                <span class="book-call-hover"></span>
+            </a>
+        </li>
         </ul>
       </nav>
   
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
   
     </div>
-  </header>
+</header>
 
   <main class="main">
 
@@ -133,11 +141,11 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-lg-last hero-img" data-aos="zoom-out">
-            <img src="assets/img/dashboardcommerce.png" alt="Safety Shield Ultra Dashboard" class="phone-1">
+            <img src="assets/img/dashboardcommerce.webp" alt="Safety Shield Ultra Dashboard" class="phone-1">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-content-center align-items text-center text-md-start" data-aos="fade-up">
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <h2><img src="assets/img/faviconc.png" alt="" class="logo-img">
+              <h2><img src="assets/img/faviconc.webp" alt="" class="logo-img">
                 C-Commerce Ultra: Double Your Sales with AI
               </h2>
               <p id="typewriter-description">
@@ -177,7 +185,7 @@
         <div class="row align-items-xl-center gy-5">
           <div class="col-lg-5 content">
             <div class="image-container">
-              <img src="assets/img/mockupcommerce.png" alt="" class="mockupcommerce">
+              <img src="assets/img/mockupcommerce.webp" alt="" class="mockupcommerce">
             </div>
             <h4>Discover C-Commerce Ultra</h4>
             <h2>AI-Powered Sales Intelligence Platform</h2>
@@ -506,7 +514,7 @@
             <a href="index.html" class="logo d-flex align-items-center">
               <span class="sitename2">Ultra Deep Tech</span>
             </a>
-            <p>At Ultra Deep Tech, we offer AI strategic solutions that will help you increase ROI and reduce costs. Our service also provides an increased focus on infusing data and enables clients to generate higher value from their digital transformation initiatives.</p>
+            <p>At Ultra Deep Tech, we simply help your business work smarter with AI, especially with generative and conversational systems. We'll help you save money and grow your revenue. Every AI solution we provide is built with security at heart – keeping your business safe and compliant. We believe in keeping things practical and focused on real results.</p>
             <div class="social-links d-flex mt-4">
               <a href="https://www.instagram.com/ultradeeptech/" target="_blank"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/company/ultra-deep-tech/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -568,8 +576,10 @@
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
+<!-- Preloader -->
+<div id="preloader">
+  <img src="assets/img/logo_udt_03-400h.png" alt="Ultra Deep Tech Logo"> <!-- Asegúrate de usar la ruta correcta del logo -->
+</div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
