--- a/productsdetails.html
+++ b/productsdetails.html
@@ -61,7 +61,6 @@
               <li><a href="about.html#company-history" class="nav-link"><i class="bi bi-clock-history"></i><span>Company History</span></a></li>
               <li><a href="about.html#team" class="nav-link"><i class="bi bi-people-fill"></i><span>Leadership Team</span></a></li>
               <li><a href="about.html#values-ethics" class="nav-link"><i class="bi bi-heart-fill"></i><span>Values and Ethics</span></a></li>
-              <li><a href="about.html#csr" class="nav-link"><i class="bi bi-globe"></i><span>Corporate Social Responsibility (CSR)</span></a></li>
               <li><a href="index.html#youtube-videos" class="nav-link"><i class="bi bi-youtube"></i><span>Youtube Channel</span></a></li>
               <li><a href="/blog.html" class="nav-link"><i class="bi bi-pencil-fill"></i><span>Blog & Social Media</span></a></li>
             </ul>
@@ -75,7 +74,7 @@
             </a>
             <ul>
               <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
-              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.png" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
+              <li><a href="ccommerce.html" class="nav-link "><img src="/assets/img/faviconc.webp" class="logo-header2"></img><span>C-Commerce Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -123,13 +122,22 @@
               <li><a href="contact.html#contact" class="nav-link"><i class="bi bi-chat-dots-fill"></i><span>Chat with Us</span></a></li>
             </ul>
           </li>
+
+          <li>
+            <a href="https://calendly.com/avipil/30-min" class="book-call-btn" target="_blank">
+                <span class="book-call-content">
+                    <span>Book a Call</span>
+                </span>
+                <span class="book-call-hover"></span>
+            </a>
+        </li>
         </ul>
       </nav>
   
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
   
     </div>
-  </header>
+</header>
 
   <main class="main">
 
@@ -232,6 +240,39 @@
       </div>
     </div>
   </section><!-- /Call To Action Section -->
+<!-- C-Commerce Call To Action Section -->
+<section id="call-to-action-2" class="call-to-action section dark-background">
+<img src="/assets/img/imgfondoccomerce.png" alt="Background image" loading="lazy">
+
+<div class="container">
+  <div class="row gy-4">
+    <!-- Left Column - Video -->
+    <div class="col-lg-6" data-aos="zoom-out">
+      <img src="assets/img/dashboardcommerce.png" class="dashboardcommerce">
+      </div>
+
+    <!-- Right Column - Text -->
+    <div class="col-lg-6">
+      <div class="text-left" data-aos="fade-up">
+        <h3>Double Your Sales with AI Power</h3>
+        <h3>Discover <b>C-Commerce Ultra</b></h3>
+        <p>
+          Transform your business with AI-powered sales intelligence.
+          <br>
+          See how C-Commerce Ultra analyzes customer behavior and optimizes conversions.
+        </p>
+        <div class="d-flex mt-4 justify-content-start">
+          <a class="cta-btn" href="ccommerce.html">
+            <i class="bi bi-graph-up"></i>
+            <span>Boost Your Sales</span>
+          </a>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 
   
   <footer id="footer" class="footer">
