--- a/safetyshield.html
+++ b/safetyshield.html
@@ -12,8 +12,8 @@
 <meta name="keywords" content="AI security, prompt injection prevention, conversational AI protection, chatbot security, AI privacy compliance, PII protection, AI response monitoring, AI access control, LLM security, AI data protection, conversation security, AI threat detection, prompt security, AI compliance, chatbot protection, AI risk management, AI privacy, AI threat prevention, secure AI interactions, AI security platform">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/favicon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/favicon.webp" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -37,7 +37,7 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+<header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
