--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/about-page-title-bg.jpg);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/4\ \(1\).png);">
       <div class="container">
         <h1>About</h1>
         <nav class="breadcrumbs">
@@ -158,7 +158,7 @@
       <div class="container">
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6">
-            <img src="assets/img/historia.jpg" class="img-fluid historia" alt="">
+            <img src="assets/img/about-page-title-bg.jpg" class="img-fluid historia" alt="">
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
@@ -175,9 +175,7 @@
     <section id="values-ethics" class="about section">
       <div class="container">
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-lg-6">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-          </div>
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>Values and Ethics</h3>
@@ -195,6 +193,9 @@
               <p>
                 At Ultra Deep Tech, we are committed to upholding the highest standards of ethics and integrity. Our core values—innovation, customer-centricity, transparency, and societal impact—guide us in every endeavor.              </p>
             </div>
+          </div>
+          <div class="col-lg-6">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -331,21 +332,6 @@
 
 
 
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-              <div class="team-member">
-                <div class="member-img">
-                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                  <div class="social">
-                 <!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
-                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Sebastian Yomal</h4>
-                  <p>Advisor</p>
-                  <span></span>
-                </div>
-              </div>
-            </div><!-- End Team Member -->
   
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
               <div class="team-member">
@@ -362,6 +348,21 @@
               </div>
             </div><!-- End Team Member -->
   
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+              <div class="team-member">
+                <div class="member-img">
+                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                  <div class="social">
+                 <!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Sebastian Yomal</h4>
+                  <p>Advisor</p>
+                  <span></span>
+                </div>
+              </div>
+            </div><!-- End Team Member -->
           </div>
   
         </div>
@@ -380,7 +381,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename2">Ultra Deep Tech</span>
+              <span class="sitename3">Ultra Deep Tech</span>
             </a>
             <p>At Ultra Deep Tech, we simply help your business work smarter with AI, especially with generative and conversational systems. We'll help you save money and grow your revenue. Every AI solution we provide is built with security at heart – keeping your business safe and compliant. We believe in keeping things practical and focused on real results.</p>
             <div class="social-links d-flex mt-4">
