--- a/productsdetails.html
+++ b/productsdetails.html
@@ -141,7 +141,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/ai\ consulting.png);">
+    <div class="page-title" data-aos="fade" style="background-image: url(/assets/img/blog/blog-3.jpg);">
       <div class="container">
         <h1>Product Details</h1>
         <nav class="breadcrumbs">
@@ -205,6 +205,7 @@
       </div>
     </section><!-- /Product Details Section -->
   </main>
+
   <section id="call-to-action" class="call-to-action section">
     <img src="/assets/img/hero-bg.webp" alt="Background image" width="1920" height="1080" loading="lazy">
 
