--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <main class="main">
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <img src="/assets/img/Leonardo_Phoenix_09_A_futuristic_background_for_a_website_that_3 (1).jpg" alt="Fondo de Ultra Deep Tech" loading="lazy">
+      <img src="/assets/img/fondo.jpg" alt="Fondo de Ultra Deep Tech" loading="lazy">
       <div class="container">
         <div class="row">
           <div class="col-xl-7">
@@ -159,7 +159,7 @@
 
     <!-- Call To Action Section -->
     <section id="why-us"  class="call-to-action section">
-      <img src="/assets/img/Demostracion (1).png" alt="Background image" width="1920" height="1080" loading="lazy">
+      <img src="/assets/img/Demostracion-_1_.webp" alt="Background image" width="1920" height="1080" loading="lazy">
       <div class="container">
         <div class="row justify-content-left" data-aos="zoom-in" data-aos-delay="100">
           <!-- Left Column -->
@@ -331,7 +331,7 @@
 
     <!-- Second Call To Action Section (ID modificado para evitar duplicidad) -->
     <section id="call-to-action-2" class="call-to-action section">
-      <img src="./assets/img/Demostracion (6).png" alt="Call to Action Image" loading="lazy">
+      <img src="./assets/img/Demostracion-_6_.webp" alt="Call to Action Image" loading="lazy">
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-10">
