--- a/productsdetails.html
+++ b/productsdetails.html
@@ -207,7 +207,7 @@
   </main>
 
   <section id="call-to-action" class="call-to-action section">
-    <img src="/assets/img/hero-bg.webp" alt="Background image" width="1920" height="1080" loading="lazy">
+    <img src="/assets/img/Demostracion-_6_.webp" alt="Background image" width="1920" height="1080" loading="lazy">
 
     <div class="container">
       <div class="row justify-content-left" data-aos="zoom-in" data-aos-delay="100">
