--- a/about.html
+++ b/about.html
@@ -319,7 +319,7 @@
                 <div class="member-img">
                   <img src="assets/img/team/maxi acri.png" class="img-fluid" alt="">
                   <div class="social">
-                 <!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
+                   <a href="https://www.linkedin.com/in/maximilianoeacri/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -330,36 +330,18 @@
               </div>
             </div><!-- End Team Member -->
 
-
-
-  
-            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
-              <div class="team-member">
-                <div class="member-img">
-                  <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                  <div class="social">
-<!--   <a href=""><i class="bi bi-linkedin"></i></a> -->                  </div>
-                </div>
-                <div class="member-info">
-                  <h4>Micaela Freedman</h4>
-                  <p>Advisor</p>
-                  <span></span>
-                </div>
-              </div>
-            </div><!-- End Team Member -->
-  
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
               <div class="team-member">
                 <div class="member-img">
-                  <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/team/luciano camano.png" class="img-fluid" alt="">
                   <div class="social">
-                 <!--   <a href=""><i class="bi bi-linkedin"></i></a> -->
+                   <a href="https://www.linkedin.com/in/luciano-camano-0996822b4/"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Sebastian Yomal</h4>
-                  <p>Advisor</p>
-                  <span></span>
+                  <h4>Luciano Camano</h4>
+                  <p>Strategic Partnerships Manager</p>
+                  <span>Brings extensive expertise in enterprise AI security solutions, forging high-impact relationships with industry leaders in highly regulated organizations.</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
