--- a/index.html
+++ b/index.html
@@ -14,21 +14,411 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Carga asíncrona de Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
+          rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    </noscript>
   
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    
-    <!-- Main CSS -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Critical CSS inline (Ejemplo: estilos básicos del header, tipografía y layout principal) -->
+    <style>
+/* Global Variables and Root Styles */
+:root {
+  --default-font: "Montserrat", sans-serif;
+  --heading-font: "Montserrat", sans-serif;
+  --nav-font: "Raleway", sans-serif;
   
-    <!-- Estilos adicionales sin lazy loading -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  --background-color: #ffffff;
+  --default-color: #333;
+  --heading-color: #3f63af;
+  --accent-color: #3f63af;
+  --contrast-color: #ffffff;
+  
+  --nav-color: rgba(255, 255, 255, 0.918);
+  --nav-hover-color: #ffffff;
+  --nav-dropdown-background-color: #3f63af;
+  --nav-dropdown-color: #ffff;
+  --nav-dropdown-hover-color: #ffffff;
+  
+  scroll-behavior: smooth;
+}
 
-      <!-- Google tag (gtag.js) -->
+
+
+
+/* General Styles */
+body {
+  color: var(--default-color);
+  font-family: var(--default-font);
+}
+a {
+  color: var(--accent-color);
+  text-decoration: none;
+  transition: color 0.3s;
+}
+a:hover {
+  color: color-mix(in srgb, var(--accent-color), transparent 25%);
+}
+h1, h2, h3, h4, h5, h6 {
+  color: var(--heading-color);
+  font-family: var(--heading-font);
+}
+
+#typewriter-title {
+  font-family: 'Courier New', Courier, monospace;
+  text-shadow: 0 0 10px #333;
+  font-weight: 900;
+  white-space: pre;
+  overflow-wrap: break-word;
+  border-right: 0.15em solid rgb(180, 174, 255);
+  display: inline-block;
+  animation: blink-caret 0.75s step-end infinite;
+  transition: max-width 0.5s, font-size 0.5s;
+  font-size: 5vw;
+  max-width: auto;
+}
+
+
+@media (min-width: 769px) {
+  #typewriter-title {
+    font-size: 2vw;
+  }
+}
+@media (max-width: 768px) {
+  #typewriter-title {
+    font-size: 4vw;
+    white-space: normal;
+    overflow-wrap: break-word;
+  }
+}
+@media (max-width: 480px) {
+  #typewriter-title {
+    font-size: 6vw;
+    font-weight: bold;
+    white-space: normal;
+    overflow-wrap: break-word;
+  }
+}
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { 
+    border-color: rgb(118, 126, 243);
+  }
+}
+.hide {
+  display: none !important;
+}
+
+/* Global Header */
+.header {
+  --background-color: rgba(255, 255, 255, 0);
+  --heading-color: #ffffff;
+  color: var(--default-color);
+  background-color: var(--background-color);
+  padding: 10px 0;
+  transition: all 0.5s;
+  z-index: 997;
+  text-shadow: 0 0 5px #333;
+}
+.header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -180%;
+  width: 200%;
+  height: 100%;
+  background: linear-gradient(120deg, transparent, rgba(145, 186, 248, 0.171), transparent);
+}
+.header .logo {
+  line-height: 1;
+}
+.header .logo h1 {
+  font-size: 25px;
+  margin: 0;
+  font-weight: 700;
+  color: var(--heading-color);
+}
+.scrolled .header {
+  box-shadow: 0px 0 18px color-mix(in srgb, var(--default-color), transparent 85%);
+  background: linear-gradient(145deg, #3f63af, #26498a);
+  text-decoration: #fff;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  transition: transform 0.3s;
+}
+.logo:hover {
+  transform: scale(1.05);
+}
+.sitename {
+  font-size: 2em;
+  margin-left: 10px;
+  position: relative;
+  overflow: visible;
+  white-space: nowrap;
+  color: #fff;
+}
+.sitename2 {
+
+  color: #fff !important;
+}
+.sitename3 {
+  color: #1e4b7a !important;
+}
+
+.sitename:hover {
+  animation: textGlow 2s infinite;
+}
+.logo-img {
+  width: 50px;
+  height: auto;
+  filter: brightness(1.5);
+  transition: transform 0.3s, filter 0.3s, box-shadow 0.3s;
+}
+.logo-img:hover {
+  transform: rotate(5deg) scale(1.1);
+  filter: brightness(2);
+}
+
+/* Navigation Menu */
+@media (min-width: 1200px) {
+  .navmenu {
+    padding: 0;
+  }
+  .navmenu ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+  .navmenu li {
+    position: relative;
+  }
+  .navmenu a,
+  .navmenu a:focus {
+    color: var(--nav-color);
+    padding: 18px 15px;
+    font-size: 16px;
+    font-family: var(--nav-font);
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: color 0.3s;
+  }
+  .navmenu a i,
+  .navmenu a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+    transition: font-size 0.3s;
+  }
+  .navmenu li:last-child a {
+    padding-right: 0;
+  }
+  .navmenu li:hover > a,
+  .navmenu .active,
+  .navmenu .active:focus {
+    color: var(--nav-hover-color);
+  }
+  .navmenu .dropdown ul {
+    margin: 0;
+    padding: 10px 0;
+    background: linear-gradient(145deg, #3f63af, #26498a);
+    display: block;
+    position: absolute;
+    visibility: hidden;
+    left: 14px;
+    top: 130%;
+    opacity: 0;
+    transition: opacity 0.3s, top 0.3s;
+    z-index: 99;
+    box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 85%);
+    border-radius: 10px;
+  }
+  .navmenu .dropdown ul li {
+    min-width: 200px;
+  }
+  .navmenu .dropdown ul a {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: none;
+    color: var(--nav-dropdown-color);
+  }
+  .navmenu .dropdown ul a i {
+    font-size: 12px;
+  }
+  .navmenu .dropdown ul a:hover,
+  .navmenu .dropdown ul .active:hover,
+  .navmenu .dropdown ul li:hover > a {
+    color: var(--nav-dropdown-hover-color);
+    background: #97add673;
+  }
+  .navmenu .dropdown:hover > ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+  .navmenu .dropdown .dropdown ul {
+    top: 0;
+    left: -90%;
+    visibility: hidden;
+  }
+  .navmenu .dropdown .dropdown:hover > ul {
+    opacity: 1;
+    top: 0;
+    left: -100%;
+    visibility: visible;
+  }
+}
+@media (max-width: 1199px) {
+  .mobile-nav-toggle {
+    color: var(--nav-color);
+    font-size: 28px;
+    line-height: 0;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+  .navmenu {
+    padding: 0;
+    z-index: 9997;
+  }
+  .navmenu ul {
+    display: none;
+    position: absolute;
+    inset: 60px 20px 20px 20px;
+    padding: 10px 0;
+    margin: 0;
+    border-radius: 6px;
+    background-color: var(--nav-dropdown-background-color);
+    overflow-y: auto;
+    transition: opacity 0.3s;
+    z-index: 9998;
+    box-shadow: 0px 0px 30px color-mix(in srgb, var(--default-color), transparent 90%);
+  }
+  .navmenu a,
+  .navmenu a:focus {
+    color: var(--nav-dropdown-color);
+    padding: 10px 20px;
+    font-family: var(--nav-font);
+    font-size: 17px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: color 0.3s;
+  }
+  .navmenu a i,
+  .navmenu a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: background-color 0.3s;
+    background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
+  }
+  .navmenu a i:hover,
+  .navmenu a:focus i:hover {
+    background-color: var(--accent-color);
+    color: var(--contrast-color);
+  }
+  .navmenu a:hover,
+  .navmenu .active,
+  .navmenu .active:focus {
+    background-color: #26498a;
+    color: #ffffff;
+  }
+  .navmenu .active i,
+  .navmenu .active:focus i {
+    background-color: var(--accent-color);
+    color: var(--contrast-color);
+    transform: rotate(180deg);
+  }
+  .navmenu .dropdown ul {
+    position: static;
+    display: none;
+    z-index: 99;
+    padding: 10px 0;
+    margin: 10px 20px;
+    background-color: var(--nav-dropdown-background-color);
+    border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+    box-shadow: none;
+    transition: all 0.5s ease-in-out;
+  }
+  .navmenu .dropdown ul ul {
+    background-color: rgba(33, 37, 41, 0.1);
+  }
+  .navmenu .dropdown > .dropdown-active {
+    display: block;
+    background-color: rgba(33, 37, 41, 0.03);
+  }
+  .mobile-nav-active {
+    overflow: hidden;
+  }
+  .mobile-nav-active .mobile-nav-toggle {
+    color: #fff;
+    position: absolute;
+    font-size: 32px;
+    top: 15px;
+    right: 15px;
+    margin-right: 0;
+    z-index: 9999;
+  }
+  .mobile-nav-active .navmenu {
+    position: fixed;
+    overflow: hidden;
+    inset: 0;
+    background: rgba(33, 37, 41, 0.8);
+    transition: 0.3s;
+  }
+  .mobile-nav-active .navmenu > ul {
+    display: block;
+  }
+}
+    </style>
+    
+    <!-- Vendor CSS Files con carga asíncrona para los no críticos -->
+      <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    </noscript>
+  
+    <!-- Main CSS. Si parte de él es crítico, podrías inlinear lo esencial y cargar el resto asíncronamente -->
+    <link href="assets/css/main.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="assets/css/main.css" rel="stylesheet">
+    </noscript>
+  
+    <!-- Estilos adicionales -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    </noscript>
+  
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    </noscript>
+  
+    <!-- Google Tag Manager (cargado de forma asíncrona) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LD1QMH1MRS"></script>
+
+
   </head>
 
 
@@ -137,7 +527,7 @@
   <main class="main">
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <img src="/assets/img/fondo.jpg" alt="Fondo de Ultra Deep Tech" loading="lazy">
+      <img src="/assets/img/fondo.jpg" alt="Fondo de Ultra Deep Tech" loading="eager">
       <div class="container">
         <div class="row">
           <div class="col-xl-7">
