--- a/index.html
+++ b/index.html
@@ -390,6 +390,53 @@ h1, h2, h3, h4, h5, h6 {
 }
     </style>
     
+    <script>
+      window.addEventListener("load", function() {
+    // Opcional: un pequeño retraso para asegurar que el renderizado crítico ya esté completo
+    setTimeout(function() {
+      const titles = [
+        "AI Observability & Traceability",
+        "RAG systems Cybersecurity",
+        "Automated Governance, Risk & Compliance",
+        "Generative AI Red Teaming",
+        "Innovative AI Solutions"
+      ];
+      let titleIndex = 0;
+      let charIndex = 0;
+      const speed = 80;            // Velocidad de la escritura (ms)
+      const delayBetweenTitles = 1500; // Retardo entre títulos (ms)
+      const typewriterTitle = document.getElementById("typewriter-title");
+  
+      function typeWriter() {
+        if (charIndex < titles[titleIndex].length) {
+          typewriterTitle.innerHTML += titles[titleIndex].charAt(charIndex);
+          charIndex++;
+          setTimeout(typeWriter, speed);
+        } else {
+          setTimeout(() => {
+            charIndex = 0;
+            titleIndex = (titleIndex + 1) % titles.length;
+            typewriterTitle.innerHTML = "";
+            typeWriter();
+          }, delayBetweenTitles);
+        }
+      }
+  
+      typeWriter();
+    }, 100);
+  
+    // Agregar efectos de glow a otros elementos
+    const sitename = document.querySelector('.sitename');
+    const logoImg = document.querySelector('.logo-img');
+    
+    sitename.classList.add('glow');
+    logoImg.classList.add('glow');
+  });
+  
+
+
+
+    </script>
     <!-- Vendor CSS Files con carga asíncrona para los no críticos -->
       <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   
@@ -531,12 +578,12 @@ h1, h2, h3, h4, h5, h6 {
       <div class="container">
         <div class="row">
           <div class="col-xl-7">
-            <blockquote data-aos="fade-up" data-aos-delay="50">
+            <blockquote >
               <p id="typewriter-drescription">We do AI Security</p>
             </blockquote>
             <h1 data-aos="fade-up" id="typewriter-title"></h1>
 
-            <div class="d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="d-flex" >
               <a href="#why-us" class="btn-get-started">Get Started</a>
             </div>
           </div>
