--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
   scroll-behavior: smooth;
 }
 
-
-
-
 /* General Styles */
 body {
   color: var(--default-color);
@@ -65,6 +62,131 @@ h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
 }
 
+/* S Section */
+.hero {
+  --default-color: #ffffff;
+  --background-color: #1b2f4581;
+  --heading-color: #ffffff;
+  width: 100%;
+  min-height: 100vh;
+  padding: 120px 0 60px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* Ajusta el gradiente para lograr el efecto deseado:
+     De oscuro en la parte superior a transparente en la parte inferior */
+  background: linear-gradient(to bottom, #2f4eb3b3, rgba(218, 216, 216, 0));
+  z-index: 1;
+}
+.lazy {
+  opacity: 0;
+  transition: opacity 0.1s ease-in;
+}
+.lazy.loaded {
+  opacity: 1;
+}
+@media (min-width: 1200px) {
+  .hero:after {
+    content: "";
+    width: 44%;
+    position: absolute;
+    z-index: 3;
+  }
+}
+
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hero .container,
+.hero .container-fluid {
+  position: relative;
+  z-index: 4;
+}
+.hero h1 {
+  margin: 0;
+  font-size: 3rem;
+  font-weight: 700;
+  z-index: 1;
+}
+.hero blockquote {
+  text-shadow: 0 0 5px #00000093;
+  color: #fff;
+  font-size: clamp(20px, 8vw, 80px);
+  font-weight: 700;
+  line-height: 1; /* Ajusta este valor según lo necesites */
+  padding-left: 10px;
+  width: auto;
+  border-left: 4px solid #fafafa;
+  margin: 10px 0;
+}
+
+
+.hero .btn-get-started {
+  color: var(--contrast-color);
+  background: var(--accent-color);
+  font-family: var(--heading-font);
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 30px;
+  border-radius: 50px;
+  transition: background-color 0.5s;
+  z-index: 5;
+  position: relative;
+  margin-top: 15px;
+}
+.hero .btn-get-started:hover {
+  background: #fff;
+  color: #26498a;
+}
+.hero .btn-watch-video {
+  font-size: 16px;
+  transition: color 0.5s;
+  margin-left: 25px;
+  color: var(--default-color);
+  font-weight: 600;
+  z-index: 5;
+  position: relative;
+}
+.hero .btn-watch-video i {
+  color: color-mix(in srgb, var(--default-color), transparent 70%);
+  font-size: 32px;
+  transition: color 0.3s;
+  line-height: 0;
+  margin-right: 8px;
+}
+@media (max-width: 640px) {
+  .hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  .hero .btn-get-started,
+  .hero .btn-watch-video {
+    font-size: 13px;
+  }
+}
+@media (max-width: 768px) {
+  .hero video {
+    height: 100vh;
+  }
+}
+
+
 #typewriter-title {
   font-family: 'Courier New', Courier, monospace;
   text-shadow: 0 0 10px #333;
@@ -78,6 +200,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 5vw;
   max-width: auto;
 }
+
 
 
 @media (min-width: 769px) {
