--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ h1, h2, h3, h4, h5, h6 {
             <blockquote >
               <p id="typewriter-drescription">We do AI Security</p>
             </blockquote>
-            <h1 data-aos="fade-up" id="typewriter-title"></h1>
+            <h1  id="typewriter-title"></h1>
 
             <div class="d-flex" >
               <a href="#why-us" class="btn-get-started">Get Started</a>
