--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
             const titles = [
                 "Secure all your AI, everywhere",
                 "Secure your AI, in the cloud",
-                "Secure your AI, in premises",
+                "Secure your AI, on premises",
                 "Secure your conversational AI, externally",
                 "Secure your conversational AI, internally",
                 "Secure your conversational AI, in the cloud",
