--- a/index.html
+++ b/index.html
@@ -619,21 +619,21 @@
     <script>
         window.addEventListener("load", function() {
             const titles = [
-                " ",
+                <!-- " ", -->
                 "Secure all your AI, everywhere",
                 "Secure your AI, in the cloud",
                 "Secure your AI, on premises",
                 "Secure your conversational AI, externally",
                 "Secure your conversational AI, internally",
                 "Secure your conversational AI, in the cloud",
-                "Secure your conversational AI, in premises",
+                "Secure your conversational AI, on premises",
                 "Secure Your AI Governance",
-                "Monitor Your Threat Landscape",
-                "Assess Your Compliance Posture",
-                "Secure Your Model Infrastructure",
+                "Monitor Your AI Threat Landscape",
+                "Assess Your AI Compliance Posture",
+                "Secure Your AI Model Infrastructure",
                 "Monitor Your Data Privacy",
-                "Evaluate Your Ethical AI Practices",
-                "Secure Your Enterprise Integration",
+                "Build Your Ethical AI Framework",
+                "Secure Your Enterprise AI Integration",
                 "Monitor Your Operational Resilience"
             ];
             // Empezamos con el segundo título (índice 1)
