--- a/index.html
+++ b/index.html
@@ -619,22 +619,20 @@
     <script>
         window.addEventListener("load", function() {
             const titles = [
-                <!-- " ", -->
-                "Secure all your AI, everywhere",
-                "Secure your AI, in the cloud",
-                "Secure your AI, on premises",
-                "Secure your conversational AI, externally",
-                "Secure your conversational AI, internally",
-                "Secure your conversational AI, in the cloud",
-                "Secure your conversational AI, on premises",
-                "Secure Your AI Governance",
-                "Monitor Your AI Threat Landscape",
-                "Assess Your AI Compliance Posture",
-                "Secure Your AI Model Infrastructure",
-                "Monitor Your Data Privacy",
-                "Build Your Ethical AI Framework",
-                "Secure Your Enterprise AI Integration",
-                "Monitor Your Operational Resilience"
+                "In The Cloud",
+                "On Your Premises",
+                "In Your Browser",
+                "In Your Network",
+                "For Your Employees",
+                "For Your Data",
+                "For Your Compliance",
+                "For Your Ethics",
+                "For Your Business",
+                "Everywhere",
+                "All The Time",
+                "24/7",
+                "365 Days",
+                "For You"
             ];
             // Empezamos con el segundo título (índice 1)
             let titleIndex = 1;
@@ -823,7 +821,7 @@
                 <div class="row">
                     <div class="col-xl-7">
                         <blockquote>
-                            <p id="typewriter-drescription">We do AI Security</p>
+                            <p id="typewriter-drescription">We Secure AI</p>
                         </blockquote>
                         <h1 data-aos="fade-up" id="typewriter-title"></h1>
 
